force-app/main/default/objects/Contact/fields/CelularAdicional1__c.field-meta.xml
<CustomField>
    <fullName>CelularAdicional1__c</fullName>
    <description>1 Celular adicional do Contato.</description>
    <label>Celular Adicional 1</label>
    <type>Phone</type>
</CustomField>