force-app/main/default/objects/Contact/fields/CelularAdicional2__c.field-meta.xml
<CustomField>
    <fullName>CelularAdicional2__c</fullName>
    <description>2 Celular adicional do Contato.</description>
    <label>Celular Adicional 2</label>
    <type>Phone</type>
</CustomField>