force-app/main/default/objects/Contact/fields/CEP__c.field-meta.xml
<CustomField>
    <fullName>CEP__c</fullName>
    <description>CEP do Lead.</description>
    <label>CEP</label>
    <length>9</length>
    <type>Text</type>
</CustomField>