force-app/main/default/objects/Contact/fields/CEPComercial__c.field-meta.xml
<CustomField>
    <fullName>CEPComercial__c</fullName>
    <label>CEP (Comercial)</label>
    <length>9</length>
    <type>Text</type>
</CustomField>