force-app/main/default/objects/Contact/fields/CidadeComercial__c.field-meta.xml
<CustomField>
    <fullName>CidadeComercial__c</fullName>
    <label>Cidade (Comercial)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>