force-app/main/default/objects/Contact/fields/ClassificaoDaConta__c.field-meta.xml
<CustomField>
    <fullName>ClassificaoDaConta__c</fullName>
    <description>Campo que contém a classificação da conta</description>
    <label>Classificação da Conta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Ex-Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>