force-app/main/default/objects/Contact/fields/ComplementoComercial__c.field-meta.xml
<CustomField>
    <fullName>ComplementoComercial__c</fullName>
    <label>Complemento (Comercial)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>