force-app/main/default/objects/Contact/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <label>Conta</label>
    <length>30</length>
    <type>Text</type>
</CustomField>