force-app/main/default/objects/Contact/fields/Corretor__c.field-meta.xml
<CustomField>
    <fullName>Corretor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selecionar se for corretor.</description>
    <label>Corretor</label>
    <type>Checkbox</type>
</CustomField>