force-app/main/default/objects/Contact/fields/CRECI__c.field-meta.xml
<CustomField>
    <fullName>CRECI__c</fullName>
    <description>Deve ser preenchido 
com o número do 
CRECI.</description>
    <inlineHelpText>Conselho Regional 
de Corretores de
Imóveis.</inlineHelpText>
    <label>CRECI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>