force-app/main/default/objects/Contact/fields/CRECIAtivo__c.field-meta.xml
<CustomField>
    <fullName>CRECIAtivo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRECI Ativo?</label>
    <type>Checkbox</type>
</CustomField>