force-app/main/default/objects/Contact/fields/DataAdmissao__c.field-meta.xml
<CustomField>
    <fullName>DataAdmissao__c</fullName>
    <label>Data de associação</label>
    <type>Date</type>
</CustomField>