force-app/main/default/objects/Contact/fields/DataDeCasamento__c.field-meta.xml
<CustomField>
    <fullName>DataDeCasamento__c</fullName>
    <label>Data de Casamento</label>
    <type>Date</type>
</CustomField>