force-app/main/default/objects/Contact/fields/DatadeInscricao__c.field-meta.xml
<CustomField>
    <fullName>DatadeInscricao__c</fullName>
    <description>Deve ser preenchido 
com a data de inscrição do 
CRECI</description>
    <label>Data de Inscrição</label>
    <type>Date</type>
</CustomField>