force-app/main/default/objects/Contact/fields/DataDemissao__c.field-meta.xml
<CustomField>
    <fullName>DataDemissao__c</fullName>
    <label>Data de desassociação</label>
    <type>Date</type>
</CustomField>