force-app/main/default/objects/Contact/fields/DatadeVencimento__c.field-meta.xml
<CustomField>
    <fullName>DatadeVencimento__c</fullName>
    <description>Deve ser preenchido
com a data de vencimento do
CRECI.</description>
    <label>Data de Vencimento</label>
    <type>Date</type>
</CustomField>