force-app/main/default/objects/Contact/fields/DataEntradaOnline__c.field-meta.xml
<CustomField>
    <fullName>DataEntradaOnline__c</fullName>
    <label>Data de entrada online</label>
    <type>Date</type>
</CustomField>