force-app/main/default/objects/Contact/fields/DataReadmissao__c.field-meta.xml
<CustomField>
    <fullName>DataReadmissao__c</fullName>
    <label>Data de reassociação</label>
    <type>Date</type>
</CustomField>