force-app/main/default/objects/Contact/fields/DataSaidaOnline__c.field-meta.xml
<CustomField>
    <fullName>DataSaidaOnline__c</fullName>
    <label>Data de saída online</label>
    <type>Date</type>
</CustomField>