force-app/main/default/objects/Contact/fields/EmailAdicional__c.field-meta.xml
<CustomField>
    <fullName>EmailAdicional__c</fullName>
    <description>E-mail adicional do Contato.</description>
    <label>Email Adicional</label>
    <type>Email</type>
</CustomField>