force-app/main/default/objects/Contact/fields/EmissaoCertidaodeRegularidadeCRECI__c.field-meta.xml
<CustomField>
    <fullName>EmissaoCertidaodeRegularidadeCRECI__c</fullName>
    <description>Deve ser preenchido
com a data de emissão de regularidade do
CRECI.</description>
    <label>Emissão Certidão de Regularidade CRECI</label>
    <type>Date</type>
</CustomField>