force-app/main/default/objects/Contact/fields/EstadoCivil__c.field-meta.xml
<CustomField>
    <fullName>EstadoCivil__c</fullName>
    <label>Estado Civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solteiro(a)</fullName>
            </value>
            <value>
                <fullName>Casado(a) (União estável)</fullName>
            </value>
            <value>
                <fullName>Casado(a) (Separação total)</fullName>
            </value>
            <value>
                <fullName>Casado(a) (Comunhão total)</fullName>
            </value>
            <value>
                <fullName>Casado(a) (Comunhão parcial)</fullName>
            </value>
            <value>
                <fullName>Separado(a) judicialmente</fullName>
            </value>
            <value>
                <fullName>Divorciado(a)</fullName>
            </value>
            <value>
                <fullName>Viúvo(a)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>