force-app/main/default/objects/Contact/fields/EstadoProvincia__c.field-meta.xml
<CustomField>
    <fullName>EstadoProvincia__c</fullName>
    <description>Estado do Lead.</description>
    <label>Estado/Província</label>
    <length>255</length>
    <type>Text</type>
</CustomField>