force-app/main/default/objects/Contact/fields/IdentificacaoExterna__c.field-meta.xml
<CustomField>
    <fullName>IdentificacaoExterna__c</fullName>
    <label>Identificação externa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>