force-app/main/default/objects/Contact/fields/LocalDeNascimento__c.field-meta.xml
<CustomField>
    <fullName>LocalDeNascimento__c</fullName>
    <label>Local de Nascimento</label>
    <length>30</length>
    <type>Text</type>
</CustomField>