force-app/main/default/objects/Contact/fields/Logradouro__c.field-meta.xml
<CustomField>
    <fullName>Logradouro__c</fullName>
    <label>Logradouro</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>