force-app/main/default/objects/Contact/fields/LogradouroComercial__c.field-meta.xml
<CustomField>
    <fullName>LogradouroComercial__c</fullName>
    <label>Logradouro (Comercial)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>