force-app/main/default/objects/Contact/fields/Nacionalidade__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidade__c</fullName>
    <description>Nacionalidade da conta</description>
    <label>Nacionalidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afeganistão</fullName>
            </value>
            <value>
                <fullName>África do Sul</fullName>
            </value>
            <value>
                <fullName>Albânia</fullName>
            </value>
            <value>
                <fullName>Alemanha</fullName>
            </value>
            <value>
                <fullName>Andorra</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Antígua e Barbuda</fullName>
            </value>
            <value>
                <fullName>Arábia Saudita</fullName>
            </value>
            <value>
                <fullName>Argélia</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Armênia</fullName>
            </value>
            <value>
                <fullName>Austrália</fullName>
            </value>
            <value>
                <fullName>Áustria</fullName>
            </value>
            <value>
                <fullName>Azerbaijão</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>Bangladexe</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Barém</fullName>
            </value>
            <value>
                <fullName>Bélgica</fullName>
            </value>
            <value>
                <fullName>Belize</fullName>
            </value>
            <value>
                <fullName>Benim</fullName>
            </value>
            <value>
                <fullName>Bielorrússia</fullName>
            </value>
            <value>
                <fullName>Bolívia</fullName>
            </value>
            <value>
                <fullName>Bósnia e Herzegovina</fullName>
            </value>
            <value>
                <fullName>Botsuana</fullName>
            </value>
            <value>
                <fullName>Brasil</fullName>
            </value>
            <value>
                <fullName>Brunei</fullName>
            </value>
            <value>
                <fullName>Bulgária</fullName>
            </value>
            <value>
                <fullName>Burquina Faso</fullName>
            </value>
            <value>
                <fullName>Burúndi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>