force-app/main/default/objects/Contact/fields/Naturalidade__c.field-meta.xml
<CustomField>
    <fullName>Naturalidade__c</fullName>
    <description>Naturalidade da conta</description>
    <label>Naturalidade</label>
    <length>80</length>
    <type>Text</type>
</CustomField>