force-app/main/default/objects/Contact/fields/NumeroComercial__c.field-meta.xml
<CustomField>
    <fullName>NumeroComercial__c</fullName>
    <label>Número (Comercial)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>