force-app/main/default/objects/Contact/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <description>País do Lead.</description>
    <label>País</label>
    <length>255</length>
    <type>Text</type>
</CustomField>