force-app/main/default/objects/Contact/fields/PreferenciadeContato__c.field-meta.xml
<CustomField>
    <fullName>PreferenciadeContato__c</fullName>
    <description>Campo onde deve ser
selecionado apenas uma
das opções de preferência
de contato.</description>
    <label>Preferência de Contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indiferente</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Telefone</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>