force-app/main/default/objects/Contact/fields/PreferenciadeHorariodeContato__c.field-meta.xml
<CustomField>
    <fullName>PreferenciadeHorariodeContato__c</fullName>
    <label>Preferência de Horário de Contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indiferente</fullName>
            </value>
            <value>
                <fullName>Manhã</fullName>
            </value>
            <value>
                <fullName>Tarde</fullName>
            </value>
            <value>
                <fullName>Noite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>