force-app/main/default/objects/Contact/fields/Reporta_se_A__c.field-meta.xml
<CustomField>
    <fullName>Reporta_se_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporta-se à</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contatos</relationshipLabel>
    <relationshipName>Contatos</relationshipName>
    <type>Lookup</type>
</CustomField>