force-app/main/default/objects/Contact/fields/RG__c.field-meta.xml
<CustomField>
    <fullName>RG__c</fullName>
    <description>Deve ser preenchido 
com o RG do contato.</description>
    <label>RG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>