force-app/main/default/objects/Contact/fields/Rua__c.field-meta.xml
<CustomField>
    <fullName>Rua__c</fullName>
    <description>Rua do Contato.</description>
    <label>Rua</label>
    <length>255</length>
    <type>Text</type>
</CustomField>