force-app/main/default/objects/Contact/fields/StatusCorretor__c.field-meta.xml
<CustomField>
    <fullName>StatusCorretor__c</fullName>
    <label>Status Corretor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Desligado</fullName>
            </value>
            <value>
                <fullName>Em processo</fullName>
            </value>
            <value>
                <fullName>Suspenso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>