force-app/main/default/objects/Contact/fields/StatusUsuarioCorretor__c.field-meta.xml
<CustomField>
    <fullName>StatusUsuarioCorretor__c</fullName>
    <label>Status usuário do corretor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Desativado</fullName>
            </value>
            <value>
                <fullName>Congelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>