force-app/main/default/objects/Contact/fields/TipoCorretor__c.field-meta.xml
<CustomField>
    <fullName>TipoCorretor__c</fullName>
    <label>Tipo de Corretor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CORRETOR ONLINE</fullName>
            </value>
            <value>
                <fullName>CORRETOR SALÃO</fullName>
            </value>
            <value>
                <fullName>COORDENADOR COMERCIAL</fullName>
            </value>
            <value>
                <fullName>COORDENADOR DE PRODUTO PF</fullName>
            </value>
            <value>
                <fullName>COORDENADOR DE PRODUTO PJ</fullName>
            </value>
            <value>
                <fullName>COORDENADOR ONLINE PJ</fullName>
            </value>
            <value>
                <fullName>COORDENADOR ONLINE PF</fullName>
            </value>
            <value>
                <fullName>DIRETOR COMERCIAL</fullName>
            </value>
            <value>
                <fullName>DIRETOR GERAL PF</fullName>
            </value>
            <value>
                <fullName>DIRETOR GERAL PJ</fullName>
            </value>
            <value>
                <fullName>FINANCEIRO</fullName>
            </value>
            <value>
                <fullName>GERENTE SALÃO PJ</fullName>
            </value>
            <value>
                <fullName>GERENTE PARCEIRO PJ</fullName>
            </value>
            <value>
                <fullName>GERENTE PARCEIRO PF</fullName>
            </value>
            <value>
                <fullName>GERENTE SALÃO PF</fullName>
            </value>
            <value>
                <fullName>PARCEIRO PF</fullName>
            </value>
            <value>
                <fullName>PARCEIRO PJ</fullName>
            </value>
            <value>
                <fullName>RECEPCIONISTA</fullName>
            </value>
            <value>
                <fullName>SUPERINTENDENTE PJ</fullName>
            </value>
            <value>
                <fullName>SUPERINTENDENTE PF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>