force-app/main/default/objects/Contact/fields/TipoCRECI__c.field-meta.xml
<CustomField>
    <fullName>TipoCRECI__c</fullName>
    <label>Tipo de CRECI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Definitivo</fullName>
            </value>
            <value>
                <fullName>Estagiário</fullName>
            </value>
            <value>
                <fullName>Iniciante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>