force-app/main/default/objects/Contact/fields/TipodeCRECI__c.field-meta.xml
<CustomField>
    <fullName>TipodeCRECI__c</fullName>
    <label>Tipo de CRECI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Físico</fullName>
            </value>
            <value>
                <fullName>Jurídico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>