force-app/main/default/objects/Contact/fields/UsuarioCorretor__c.field-meta.xml
<CustomField>
    <fullName>UsuarioCorretor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuário do Corretor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contatos</relationshipName>
    <type>Lookup</type>
</CustomField>