force-app/main/default/objects/Contact/recordTypes/Contato.recordType-meta.xml
<RecordType>
    <fullName>Contato</fullName>
    <active>true</active>
    <label>Contato</label>
</RecordType>