force-app/main/default/objects/Contact/validationRules/ObrigatoriedadedaDataDeNasciemento.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigatoriedadedaDataDeNasciemento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				OR(
    ISPICKVAL( EstadoCivil__c , &quot;Casado(a) (União estável)&quot;), 
				ISPICKVAL( EstadoCivil__c , &quot;Casado(a) (Separação total)&quot;), 
    ISPICKVAL( EstadoCivil__c , &quot;Casado(a) (Comunhão total)&quot;), 
    ISPICKVAL( EstadoCivil__c , &quot;Casado(a) (Comunhão parcial)&quot;)
								
								),
 ISBLANK(DataDeCasamento__c)
)</errorConditionFormula>
    <errorDisplayField>DataDeCasamento__c</errorDisplayField>
    <errorMessage>A data de casamento deve ser preenchida</errorMessage>
</ValidationRule>