force-app/main/default/objects/Contact/validationRules/ObrigatorioCreciAtiva.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigatorioCreciAtiva</fullName>
    <active>true</active>
    <description>Tornar obrigatório a CRECI ativa caso tenha uma data de vencimento.</description>
    <errorConditionFormula>AND(
     DatadeVencimento__c  &gt;= TODAY(),
    NOT( CRECIAtivo__c )
)</errorConditionFormula>
    <errorDisplayField>CRECIAtivo__c</errorDisplayField>
    <errorMessage>Sua CRECI está ativa, marque o Checkbox de &quot;CRECI Ativo?&quot;.</errorMessage>
</ValidationRule>