force-app/main/default/objects/Contact/validationRules/ObrigatorioDataEmissaoRG.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigatorioDataEmissaoRG</fullName>
    <active>false</active>
    <description>Tornar a Data de Emissão obrigatória caso esteja preenchido o campo RG</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(RG__c)),
    ISBLANK(DataDeEmissao__c)
)</errorConditionFormula>
    <errorMessage>A Data de Emissão é obrigatória quando o campo RG está preenchido.</errorMessage>
</ValidationRule>