force-app/main/default/objects/Contact/validationRules/ValidacaoCelular.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoCelular</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(MobilePhone)),
  NOT(REGEX(MobilePhone, &quot;[0-9]{11}&quot;))

)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>O campo &quot;Celular&quot; deve ser preenchido no formato &quot;11999999999&quot;</errorMessage>
</ValidationRule>